Prepare for Spring Boot 4