@@ -34,6 +34,8 @@ import static us.fatehi.schemacrawler.webapp.controller.URIConstants.API_PREFIX;
 import static us.fatehi.schemacrawler.webapp.controller.URIConstants.UI_RESULTS_PREFIX;
 import static us.fatehi.schemacrawler.webapp.service.storage.FileExtensionType.JSON;
 import static us.fatehi.schemacrawler.webapp.service.storage.FileExtensionType.PNG;
+
+import jakarta.validation.constraints.NotNull;
 import java.nio.file.Path;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -46,7 +48,6 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.ResponseBody;
-import jakarta.validation.constraints.NotNull;
 import schemacrawler.schemacrawler.exceptions.ExecutionRuntimeException;
 import us.fatehi.schemacrawler.webapp.model.DiagramKey;
 import us.fatehi.schemacrawler.webapp.model.DiagramRequest;
@@ -114,7 +115,7 @@ public class DiagramResultController {
     try {
       diagramRequest = retrieveResults(key);
     } catch (final Exception e) {
-      LOGGER.error(String.format("<%s>: %s", key, e.getMessage()));
+      LOGGER.error("<%s>: %s".formatted(key, e.getMessage()));
       LOGGER.trace(e.getMessage(), e);
       return ResponseEntity.notFound().build();
     }
@@ -126,8 +127,7 @@ public class DiagramResultController {
     return storageService
         .retrieveLocal(key, PNG)
         .map(PathResource::new)
-        .orElseThrow(
-            () -> new ExecutionRuntimeException(String.format("Cannot find key <%s>", key)));
+        .orElseThrow(() -> new ExecutionRuntimeException("Cannot find key <%s>".formatted(key)));
   }
 
   private DiagramRequest retrieveResults(final DiagramKey key) throws Exception {
@@ -135,9 +135,7 @@ public class DiagramResultController {
         storageService
             .retrieveLocal(key, JSON)
             .orElseThrow(
-                () ->
-                    new ExecutionRuntimeException(
-                        String.format("Cannot find request for <%s>", key)));
+                () -> new ExecutionRuntimeException("Cannot find request for <%s>".formatted(key)));
     final DiagramRequest diagramRequest =
         DiagramRequest.fromJson(newBufferedReader(jsonFile, UTF_8));
     return diagramRequest;
